# chat-system

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: discord_bot.rs  generic_config_client.rs  generic_config_server.rs  generic_multi_platform.rs  irc_client.rs  irc_echo_server.rs  irc_encrypted_client.rs  irc_encrypted_echo_server.rs  matrix_client.rs
src/: channel_type.rs  config.rs  group_chat.rs  lib.rs  markdown.rs  media.rs  message.rs  messenger.rs  rich_text.rs  server.rs  streaming.rs
src/messengers/: console.rs  discord.rs  discord_cli.rs  google_chat.rs  imessage.rs  irc.rs  matrix.rs  matrix_cli.rs  mod.rs  signal_cli.rs  slack.rs  slack_cli.rs  teams.rs  telegram.rs  telegram_cli.rs  webhook.rs  whatsapp.rs
src/servers/: irc.rs  mod.rs  tls_irc.rs
tests/: channel_type.rs  console.rs  http_messengers.rs  irc.rs  irc_server.rs  manager.rs  matrix.rs  message.rs  rich_text.rs  server.rs  signal_cli.rs  whatsapp.rs
