[package]
name = "chat-system"
version = "0.1.1"
edition = "2024"
rust-version = "1.86"
description = "A multi-protocol async chat crate — single interface for IRC, Matrix, Discord, Telegram, Slack, Signal, WhatsApp, and more"
homepage = "https://github.com/rexlunae/chat-system"
repository = "https://github.com/rexlunae/chat-system"
documentation = "https://docs.rs/chat-system"
readme = "README.md"
license = "MIT"
keywords = ["chat", "messaging", "irc", "matrix", "discord"]
categories = ["network-programming", "asynchronous"]
include = [
	"/Cargo.toml",
	"/README.md",
	"/LICENSE",
	"/src/**",
	"/examples/**",
	"/tests/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
matrix = []
whatsapp = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-sqlite-storage", "dep:wa-rs-tokio-transport", "dep:wa-rs-ureq-http"]
signal-cli = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
full = ["matrix", "whatsapp", "signal-cli", "tls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.13", features = ["json", "rustls", "form"], default-features = false }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
pulldown-cmark = { version = "0.13", default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }

wa-rs = { version = "0.2", optional = true }
wa-rs-core = { version = "0.2", optional = true }
wa-rs-sqlite-storage = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true }
wa-rs-ureq-http = { version = "0.2", optional = true }
typetag = "0.2.21"

tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[[example]]
name = "irc_client"
path = "examples/irc_client.rs"

[[example]]
name = "irc_echo_server"
path = "examples/irc_echo_server.rs"

[[example]]
name = "irc_encrypted_client"
path = "examples/irc_encrypted_client.rs"

[[example]]
name = "irc_encrypted_echo_server"
path = "examples/irc_encrypted_echo_server.rs"
required-features = ["tls"]

[[example]]
name = "discord_bot"
path = "examples/discord_bot.rs"

[[example]]
name = "matrix_client"
path = "examples/matrix_client.rs"
required-features = ["matrix"]

[[example]]
name = "generic_config_client"
path = "examples/generic_config_client.rs"

[[example]]
name = "generic_multi_platform"
path = "examples/generic_multi_platform.rs"

[[example]]
name = "generic_config_server"
path = "examples/generic_config_server.rs"
